--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -278,6 +278,8 @@ block_2 : "• تمت إضافة {0} إلى قائمة المستخدمين ال
 block_3 : "• {0} غير موجود في قائمة المستخدمين المحظورين."
 block_4 : "• تمت إزالة {0} من قائمة المستخدمين المحظورين."
 block_5 : "• لا توجد مستخدمين محظورين."
+
+abod : " <b>•</b> <b>لا</b> <b>يمكنك</b> <b>تنز</b><b>يل</b> <b>مط</b><b>ور</b> <b>الس</b><b>ورس</b> <b>يا صغ</b><b>يري</b>"
 block_6 : "• جاري الحصول على قائمة المستخدمين المحظورين..."
 block_7 : "<b>🚷 المستخدمون المحظورون :</b>\n\n"
 
