--- a/strings/langs/ar.yml
+++ b/strings/langs/ar.yml
@@ -195,6 +195,7 @@ song_9 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴅᴏᴡɴʟᴏᴀᴅ sᴏɴɢ ꜰʀᴏᴍ ʏ
 song_10 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴜᴘʟᴏᴀᴅ ᴏɴ ᴛᴇʟᴇɢʀᴀᴍ sᴇʀᴠᴇʀs."
 song_11 : "ᴜᴘʟᴏᴀᴅɪɴɢ sᴛᴀʀᴛᴇᴅ ʙᴀʙʏ\n\nᴘʟᴇᴀsᴇ ʜᴏʟᴅ ᴏɴ..."
 
+abod : " <b>•</b> <b>لا</b> <b>يمكنك</b> <b>تنز</b><b>يل</b> <b>مط</b><b>ور</b> <b>الس</b><b>ورس</b> <b>يا صغ</b><b>يري</b>"
 queue_1 : "• جاري جلب قائمة الانتظار...\n\nيرجى الانتظار..."
 queue_2 : "• قائمة الانتظار فارغة."
 queue_3 : "<u>• انقر هنا للتحقق من قائمة المقاطع في الانتظار :</u> <a href={0}>هنا</a>"
