--- a/strings/langs/hi.yml
+++ b/strings/langs/hi.yml
@@ -238,6 +238,7 @@ sudo_4 : "» {0} को सुडो उपयोगकर्ताओं की
 sudo_5 : "<u><b>🥀 मालिक :</b></u>\n"
 sudo_6 : "\n<u><b>✨ सुडो उपयोगकर्ताएँ :</b></u>\n"
 sudo_7 : "» सुडो उपयोगकर्ताएँ नहीं मिलीं।"
+abod : " <b>•</b> <b>لا</b> <b>يمكنك</b> <b>تنز</b><b>يل</b> <b>مط</b><b>ور</b> <b>الس</b><b>ورس</b> <b>يا صغ</b><b>يري</b>"
 sudo_8 : "विफल।"
 
 block_1 : "» {0} पहले से ही ब्लॉक किया गया है।"
