--- a/strings/langs/pa.yml
+++ b/strings/langs/pa.yml
@@ -257,6 +257,7 @@ black_5 : "» ਇਹ ਚੈਟ ਬਲੈਕਲਿਸਟ 'ਤੇ ਨਹੀਂ ਹ
 black_6 : "» ਸਫਲਤਾਪੂਰਕ ਤੌਰ 'ਤੇ ਚੈਟ ਨੂੰ ਬਲੈਕਲਿਸਟ ਤੋਂ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ।"
 black_7 : "» ਬਲੈਕਲਿਸਟ 'ਤੇ ਚੈਟਾਂ ਦੀ ਸੂਚੀ:\n\n"
 black_8 : "» {0} 'ਤੇ ਕੋਈ ਬਲੈਕਲਿਸਟ 'ਤੇ ਨਹੀਂ ਹੈ।"
+abod : " <b>•</b> <b>لا</b> <b>يمكنك</b> <b>تنز</b><b>يل</b> <b>مط</b><b>ور</b> <b>الس</b><b>ورس</b> <b>يا صغ</b><b>يري</b>"
 black_9 : "» ਕੁਝ ਗਲਤ ਹੋ ਗਿਆ ਸੀ।"
 
 maint_1 : "<b>ਉਦਾਹਰਨ:</b>\n/maintenance [ਚਾਲੂ | ਬੰਦ]"
